@@ -60,6 +60,7 @@
 * GlobalCollect: Support for Airline Data [naashton] #4187
 * IPG: Add `tpv_error_code` and `tpv_error_msg` fields [ajawadmirza] #4241
 * StripePI: Set restriction for Apple/Google Pay [jherreraa] #4247
+* Cashnet: support multiple itemcodes and amounts [peteroas] #4243
 
 == Version 1.124.0 (October 28th, 2021)
 * Worldpay: Add Support for Submerchant Data on Worldpay [almalee24] #4147
